.provarCaches/00D410000011HE0EAM/objects/rstk__wopshiprcvd__c.object
<CustomObject>
    <description>wopshiprcvd__c</description>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__wopshiprcvd_oper__r.Name &amp; &apos;_&apos; &amp; TEXT( rstk__wopshiprcvd_seqno__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>WO Outside OP Returns</relationshipLabel>
        <relationshipName>WO_Outside_OP_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_dmddolrcvdfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Freight Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_dmddolrcvdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Labor  Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_dmddolrcvdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Mtl Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_dmddolrcvdohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand OHD Fringe Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_dmddolrcvdohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand OHD Lab Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_dmddolrcvdohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand OHD Mach Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_dmddolrcvdohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand OHD Mtl Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_dmddolrcvdothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Oth Landed Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_dmddolrcvdsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Sub Lab Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_dmddolrcvdsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Sub Mtl Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_oper__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operation Number</label>
        <referenceTo>rstk__woordop__c</referenceTo>
        <relationshipLabel>WO Outside OP Returns</relationshipLabel>
        <relationshipName>WO_Outside_OP_Returns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_ordno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstk__wocst__c.rstk__wocst_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__wopshiprcvd_div__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>WO Outside OP Returns</relationshipLabel>
        <relationshipName>WO_Outside_OP_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_qtyshiprcvd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_rcptno__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Receipt Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_seqno__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstk__sysite__c.rstk__sysite_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__wopshiprcvd_div__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>WO Outside OP Returns</relationshipLabel>
        <relationshipName>WO_Outside_OP_Returns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_srlno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_supcstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Added Ohd Mtl Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_supcstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Added Sub Lab Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_supdolrcvdfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply Freight Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_supdolrcvdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply Labor Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_supdolrcvdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply Mtl Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_supdolrcvdohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply OHD Fringe Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_supdolrcvdohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply OHD Lab Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_supdolrcvdohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply OHD Mach Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_supdolrcvdohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply OHD Mtl Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_supdolrcvdothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply Oth Landed Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_supdolrcvdsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply Sub Lab Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopshiprcvd_supdolrcvdsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supply Sub Mtl Dol Received Back</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WO Outside OP Returns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>